Create content in plain html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-    </title>
+    <title>Common cents Party</title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="nav">
+        <h3>Common Cents Party</h3>
+          <ul>
+            <li>Home</li>
+            <li><a href="shows.html">Shows</a></li>
+            <li>Albums</li>
+            <li>Gallery</li>
+            <li>Bio</li>
+            <li>Blog</li>
+          </ul>
+      </div>
+      <div class="main">
+        <h1>Common Cents Party</h1>
+        <img src="band.jpg" height="300px" alt="picture of a band">
+          <p>"Common Cents Party, a hard-hitting acoustic punk/electronic four-piece from Atlanta, Georgia, combines an unleashed live performance with edgy lyrics, unforgettable hooks and well-studied synth-rock sounds. A must-see, must-hear new band." -Screech Magazine</p>
+          <a href="shows.html">Here's a list of upcoming shows.</a>
+      </div>
+
+    </div>
   </body>
 </html>
