--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Common cents Party</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -18,7 +19,7 @@
       </div>
       <div class="main">
         <h1>Common Cents Party</h1>
-        <img src="band.jpg" height="300px" alt="picture of a band">
+        <img src="band.jpg" alt="picture of a band">
           <p>"Common Cents Party, a hard-hitting acoustic punk/electronic four-piece from Atlanta, Georgia, combines an unleashed live performance with edgy lyrics, unforgettable hooks and well-studied synth-rock sounds. A must-see, must-hear new band." -Screech Magazine</p>
           <a href="shows.html">Here's a list of upcoming shows.</a>
       </div>
