--- a/shows.html
+++ b/shows.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Common cents Party</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div class="container">
       <div class="nav">
-        <h4>Common Cents Party</h4>
+        <h3>Common Cents Party</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li>Show</li>
+            <li>Shows</li>
             <li>Albums</li>
             <li>Gallery</li>
             <li>Bio</li>
